--- a/src/component/TicTacToe/TicTacToe.css
+++ b/src/component/TicTacToe/TicTacToe.css
@@ -1,58 +1,50 @@
-.container {
-  text-align: center;
+body {
+  background-color: black;
+  font-family: sans-serif;
+  margin: 0;
 }
 
-.title {
+.container {
+  text-align: center;
   color: white;
   margin-top: 30px;
-  font-size: 40px;
 }
 
 .title span {
   color: #00BFFF;
-  padding-left: 10px;
 }
 
 .board {
-  margin: 30px auto;
-  display: flex;
-  flex-direction: column;
+  width: 320px;
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
   gap: 10px;
 }
 
-.row {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-.boxes {
-  height: 100px;
+.box {
   width: 100px;
+  height: 100px;
   background-color: #1f3540;
   border: 2px solid #0f1b21;
   border-radius: 8px;
-  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.boxes img{
-    margin: 50px 50px;
-}
-
-.reset {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: gray;
-  color: beige;
-  border: none;
-  border-radius: 5px;
   cursor: pointer;
 }
 
-body {
-  margin: 0;
-  background-color: black;
+.result {
+  font-size: 24px;
+  margin: 20px 0;
+}
+
+.reset {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: gray;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
 }
